syntax = "proto3";

package proto;

import "common.proto";

option go_package = "proto/kvpb";

message KVReadOption {
    uint64 version = 1;
    uint32 flag = 2;
}
message KVGetRequest {
    string key = 1;
    KVReadOption opt = 2;
}
message KVGetResponse {
    Value v = 1;
    Error err = 2;
}

message KVWriteOption {
    uint32 flag = 1;
}
message KVSetRequest {
    string key = 1;
    Value value = 2;
    KVWriteOption opt = 3;
}
message KVSetResponse {
    Error err = 1;
}

message KVVersionCountRequest {
    string key = 1;
}
message KVVersionCountResponse {
    Error err = 1;
    int64 version_count = 2;
}

message KVUpdateMetaOption {
    uint32 flag = 1;
}
message KVUpdateMetaRequest {
    string key = 1;
    uint64 version = 2;
    KVUpdateMetaOption opt = 3;
}
message KVUpdateMetaResponse {
    Error err = 1;
}

message KVRollbackKeyRequest {
    string key = 1;
    uint64 version = 2;
}
message KVRollbackKeyResponse {
    Error err = 1;
}

message KVRemoveTxnRecordRequest {
    uint64 version = 1;
}
message KVRemoveTxnRecordResponse {
    Error err = 1;
}

service KV {
    rpc Get(KVGetRequest) returns (KVGetResponse) {}
    rpc Set(KVSetRequest) returns (KVSetResponse) {}
    rpc KeyVersionCount(KVVersionCountRequest) returns (KVVersionCountResponse) {}
    rpc UpdateMeta(KVUpdateMetaRequest) returns (KVUpdateMetaResponse) {}
    rpc RollbackKey(KVRollbackKeyRequest) returns (KVRollbackKeyResponse) {}
    rpc RemoveTxnRecord(KVRemoveTxnRecordRequest) returns (KVRemoveTxnRecordResponse) {}
}