syntax = "proto3";

package proto;

import "common.proto";

option go_package = "proto/txnpb";

enum TxnState {
    StateInvalid     = 0;
    StateUncommitted = 1;
    StateStaging     = 2;
    StateCommitted   = 3;
    StateRollbacking = 4;
    StateRollbacked  = 5;
}

enum TxnType {
    TypeDefault = 0;
    TypeReadForWrite = 1;
}

message Txn {
    uint64 id = 1;
    TxnState state = 2;
    TxnType type = 3;
    uint64 snapshot_version = 4;
}

message TxnReadOption {
    uint32 flag = 1;
}

message BeginRequest {
    TxnType type = 1;
    uint64 snapshot_version = 2;
}

message BeginResponse {
    Error err = 1;
    Txn txn = 2;
}

message TxnGetRequest {
    string key = 1;
    uint64 txn_id = 2;
    TxnReadOption opt = 3;
}

message TxnGetResponse {
    Error err = 1;
    Value v = 2;
    Txn txn = 3;
}

message TxnMGetRequest {
    repeated string keys = 1;
    uint64 txn_id = 2;
    TxnReadOption opt = 3;
}

message TxnMGetResponse {
    Error err = 1;
    repeated Value values = 2;
    Txn txn = 3;
}

message TxnSetRequest {
    string key = 1;
    bytes value = 2;
    uint64 txn_id = 3;
}

message TxnSetResponse {
    Error err = 1;
    Txn txn = 2;
}

message RollbackRequest {
    uint64 txn_id = 1;
}

message RollbackResponse {
    Error err = 1;
    Txn txn = 2;
}

message CommitRequest {
    uint64 txn_id = 1;
}

message CommitResponse {
    Error err = 1;
    Txn txn = 2;
}

service TxnService {
    rpc Begin(BeginRequest) returns (BeginResponse) {}
    rpc Get(TxnGetRequest) returns (TxnGetResponse) {}
    rpc MGet(TxnMGetRequest) returns (TxnMGetResponse) {}
    rpc Set(TxnSetRequest) returns (TxnSetResponse) {}
    rpc Rollback(RollbackRequest) returns (RollbackResponse) {}
    rpc Commit(CommitRequest) returns (CommitResponse) {}
}